--- a/views/pitch.slim
+++ b/views/pitch.slim
@@ -2,8 +2,8 @@ doctype html
 html
 	center
 		h2 oh, you need a pitch?  how about a
-		h1 first-person shooter
-		h2 with a
-		h1 cover system
+		h1 = pitchomat.random_genre.name
+		h2 game with a
+		h1 = pitchomat.random_concept.name
 		h2 about the
-		h1 cirque du soleil
+		h1 = pitchomat.random_concept.name
