--- a/public/css/pitch-o-mat.css
+++ b/public/css/pitch-o-mat.css
@@ -1,6 +1,13 @@
 body {
-	background-color: #000;
-	color: #fff;
+	font-family: "Courier New", monospace;
+}
+
+.noconcepts {
+	display: inherit;
+}
+
+.concepts {
+	display: none;
 }
 
 .genre {
