yet more web fuckery

--- a/views/pitch.slim
+++ b/views/pitch.slim
@@ -13,10 +13,14 @@ html
 			h2 I. OVERVIEW
 
 			span class="nogenres"
-				| &lt;Insert Title Here&gt; is a game.
+				span class="gametitle" contentEditable="true"
+					| &lt;Insert Title Here&gt;
+				|  is a game.
 
 			span class="genres" 
-				| &lt;Insert Title Here&gt; is a 
+				span class="gametitle" contentEditable="true"
+					| &lt;Insert Title Here&gt;
+				|  is a 
 				span class="genre_car"
 				|  game
 				span class="twogenres"
