--- a/public/css/pitch-o-mat.css
+++ b/public/css/pitch-o-mat.css
@@ -2,6 +2,10 @@ body {
 	font-family: "Courier New", monospace;
 }
 
+.gametitle {
+	border-bottom: 1px dotted;
+}
+
 .noconcepts {
 	display: inherit;
 }
@@ -10,6 +14,22 @@ body {
 	display: none;
 }
 
-.genre {
-	
+.genre a {
+	color: #000;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+.genre a:hover {
+	cursor: help;
+}
+
+.concept a {
+	color: #000;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+.concept a:hover {
+	cursor: help;
 }
