yet more web fuckery

--- a/views/pitch.slim
+++ b/views/pitch.slim
@@ -5,7 +5,7 @@ html
 		title sayeth the Pitch-O-Mat...
 
 	body
-		| sayeth the Pitch-O-Mat:
+		| the Pitch-O-Mat spills forth a design document, beginning as follows:
 
 		blockquote
 			h2 I. OVERVIEW
@@ -56,7 +56,9 @@ html
 			a class="supplicant ok_link" href="javascript:ok()" satisfactory.
 
 		span class="permalink"
-			| very well.  here is a link to this pitch, for your puny human reference: 
+			| very well.  here is a link to this pitch, for your puny human reference:
+			br
+			br
 
 		blockquote
 			a class="supplicant cancel_link" href="javascript:window.location.href='/pitchme'" you sure you don't have anything better than that, Pitch-O-Mat?
