add a post-ok refresh link, make satisfactory unclickable after click

--- a/views/pitch.slim
+++ b/views/pitch.slim
@@ -61,6 +61,9 @@ html
 			br
 
 		blockquote
+			a class="supplicant permalink" href="javascript:window.location.href='/pitchme'" Pitch-O-Mat, my heart yearns for more pitches...
+
+		blockquote
 			a class="supplicant cancel_link" href="javascript:window.location.href='/pitchme'" you sure you don't have anything better than that, Pitch-O-Mat?
 
 		input type="hidden" name="__title" value=title
